[package]
name = "influent"
version = "0.6.0"
authors = ["gobwas <gobwas@gmail.com>", "Bastien Orivel <eijebong@bananium.fr>"]
edition = "2018"

description = "InfluxDB Rust driver"
documentation = "http://gobwas.github.io/influent.rs/influent/index.html"
repository = "https://github.com/gobwas/influent.rs"
readme = "README.md"
keywords = ["influx", "influxdb"]
license = "MIT"

[dependencies]
async-trait = "0.1.18"
futures = "0.3.14"
reqwest = "0.11.3"
url = "2.2.1"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"] }
doc-comment = "0.3.3"

[badges]
travis-ci = { repository = "gobwas/influent.rs", branch = "master" }
maintenance = { status = "looking-for-maintainer" }
